--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comandos Git</title>
 </head>
-<body>
-    <h1>Probando comandos de git</h1>
 
+<body>
+    <p>
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Ullam, in iure velit nisi ea officia sint dolorem
+        inventore debitis, aliquid alias ipsa ipsum excepturi! Modi a dicta nihil voluptatem. Magni?
+    </p>
 </body>
+
 </html>
