--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Comandos Git</title>
 </head>
+
 <body>
     <h1>Probando comandos de git</h1>
-
+    <p><span>
+            Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa velit nostrum id magni aspernatur dolorum,
+            libero modi doloremque ab totam accusantium amet ut voluptates soluta necessitatibus saepe cum eius nobis.
+        </span></p>
 </body>
+
 </html>
