--- a/index.html
+++ b/index.html
@@ -10,10 +10,13 @@
 
 <body>
     <h1>Probando comandos de git</h1>
-    <p><span>
+    <p>
+        <span>
             Lorem ipsum dolor, sit amet consectetur adipisicing elit. Culpa velit nostrum id magni aspernatur dolorum,
             libero modi doloremque ab totam accusantium amet ut voluptates soluta necessitatibus saepe cum eius nobis.
-        </span></p>
+        </span>
+    </p>
+    <script src="comandos.js"></script>
 </body>
 
 </html>
